# trading-platform

./: .gitignore  README.md
Docs/: module_2_pdf_html_extractor.md
Docs/Module_1_Financial_Data_Collector/: 2024-07-16_dev_session_summary.md  Daily_Development_Summary_2025-07-20.md  Davy.md  Module_1_Design_Diagram.md  Module_1_Design_Document.md  Module_1_Development_Checklist.md  Module_1_Financial_Data_Collector_Design_Document.md  Module_1_Financial_Data_Collector_Subsections.md  Module_1_Financial_Data_Sources_Storage_Frequency.md  README.md
dashboard/: app.py  launch.py
dashboard/_pages/: __init__.py  company_indicators.py  macro_indicators.py  (+2 more)
financial_data_collector/: PRODUCTION_DEPLOYMENT_GUIDE.md  run_tests.sh  test_module_1_comprehensive.py
financial_data_collector/alpaca_data_collector/: .dockerignore  Dockerfile  README.md  configure_keys.py  docker-compose.yml  pyproject.toml  run_docker.sh  test_config_only.py  test_mock_data.py  test_setup.py
financial_data_collector/alpaca_data_collector/config/: cron_schedule.yaml  data_requirements.yaml  sources.yaml  sources.yaml.backup_20250727_093207
financial_data_collector/alpaca_data_collector/ingest/: __init__.py  events.py  ohlcv.py  orchestrator.py
services/financial_data_collector/: README.md  pyproject.toml
services/financial_data_collector/config/: cron_schedule.yaml  data_requirements.yaml
services/financial_data_collector/ingest/: events.py  fundamentals.py  macro.py  ohlcv.py
services/financial_data_collector/services/schema/: events.json  fundamentals.json  macro.json
(+88 files in other folders)
